--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,3 +24,4 @@ spring:
     init:
       mode: always
       schema-locations: classpath:/db/schema.sql
+      data-locations: classpath:/db/data.sql
