add validation util class

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,3 +25,15 @@ spring:
       mode: always
       schema-locations: classpath:/db/schema.sql
       data-locations: classpath:/db/data.sql
+
+logging:
+  level:
+    root: WARN
+    ru.serji.kuklyasha: DEBUG
+    org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver: DEBUG
+
+server.servlet:
+  encoding:
+    charset: UTF-8 # Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly
+    enabled: true # Enable http encoding support
+    force: true
