add draft settings page

--- a/react-ui/.env
+++ b/react-ui/.env
@@ -7,3 +7,4 @@ REACT_APP_PHONE_NUMBER="8-915-111-11-11"
 REACT_APP_TELEGRAM="@marina"
 REACT_APP_VK="@id1111111"
 REACT_APP_INSTAGRAM="@shalimova"
+REACT_APP_COUNTRY_LOCATION="Россия"
