--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^3.1.2",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-phone-input-2": "^2.15.1",
