--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
