--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,6 +22,9 @@ spring:
     multipart:
       max-file-size: 10485760
       max-request-size: 104857600
+  jackson:
+    deserialization:
+      fail-on-unknown-properties: true
 
 logging:
   level:
