add config and notification servers as subprojects and configure gradle

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,11 @@ gradle/
 gradlew
 gradlew.bat
 build/
+
+### App ###
 bin/
 log/
+backend/configserver/src/main/resources
 
 ### IntelliJ IDEA ###
 .idea
