--- a/react-ui/.env
+++ b/react-ui/.env
@@ -1,8 +1,8 @@
-REACT_APP_API_URL="http://localhost:8080/"
-REACT_APP_IMAGES_URL="http://localhost:8080/doll-images/"
+REACT_APP_API_URL="http://158.160.24.158:8080/"
+REACT_APP_IMAGES_URL="http://158.160.24.158:8080/doll-images/"
 REACT_APP_MANAGER="Марина"
 REACT_APP_SHOP_ADDRESS="г. Москва, ул. Матвеевская, д. 38"
-REACT_APP_EMAIL="marina-shalimova1991@gmaiil.ru"
+REACT_APP_EMAIL="marina-shalimova1991@gmail.ru"
 REACT_APP_PHONE_NUMBER="8-915-111-11-11"
 REACT_APP_TELEGRAM="@marina"
 REACT_APP_VK="@id1111111"
